--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .artistB, .aboutB, .artB, .artB, .inspiredB, .galleryB {
-	background-image: url(body07.svg); 
+	background-image: url(body07.jpg); 
 }
 
 .menuDt {
